--- a/BlazorApp2.csproj
+++ b/BlazorApp2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ant-design-blazor\components\AntDesign.csproj" />
+    <PackageReference Include="AntDesign" Version="0.14.4" />
   </ItemGroup>
 
 </Project>
