--- a/BlazorApp2.csproj
+++ b/BlazorApp2.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AntDesign" Version="0.14.4" />
+    <ProjectReference Include="..\ant-design-blazor\components\AntDesign.csproj" />
   </ItemGroup>
 
 </Project>
